Closed Bug 419710 Opened 18 years ago Closed 18 years ago

Subscribe to RSS feed didn't initially work when specifying Vienna reader

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: acmiddleton, Assigned: stuart.morgan+bugzilla)

References

()

Details

(Keywords: fixed1.8.1.13)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.12pre) Gecko/20080118 Camino/1.6b2 (like Firefox/2.0.0.12pre) Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.12pre) Gecko/20080118 Camino/1.6b2 (like Firefox/2.0.0.12pre) Browsing to Applications directory and selecting Vienna 2.2.2.2212, didn't work after repeated attempts. The error disappeared some point after running NetNewsWire Lite (I can't run the latest version, as it doesn't work on OSX 10.3.9). NetNewsWire was installed a long time ago, a year or so, and it hadn't been run in a while. Related, I had killed and restarted Camino between the time of the error and the time things ran ok. I also opened Safari and Firefox. Reproducible: Couldn't Reproduce Steps to Reproduce: 1. Browse to RSS webpage. 2. Subscribe to RSS feed, right click on icon in URL line (or select Preferences, Feed reader). 3. Browse to Applications path. Actual Results: Instead of "Vienna" showing up, a blank appears, and nag screen, something like no application installed. Expected Results: The Vienna application should have opened with the RSS feed selected. This console message may correlate to the error event: 2008-02-26 14:49:09.719 Camino[4221] *** -[FeedServiceController setDefaultFeedViewerWithIdentifier:]: selector not recognized
Ouch; the panel code for feed selection has never been correct. We should definitely fix this for 1.6.
Assignee: nobody → stuart.morgan
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: camino1.5.6?
Target Milestone: --- → Camino1.6
Attached patch fixSplinter Review
FeedServiceController doesn't actually implement setDefaultFeedViewerWithIdentifier:; this makes it stop claiming it does, and calls the method on the correct object.
Attachment #305947 - Flags: superreview?(mikepinkerton)
Allen, thanks for the detailed report (especially the console message)!
Comment on attachment 305947 [details] [diff] [review] fix EPIC FAIL! sr=pink
Attachment #305947 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.13
Resolution: --- → FIXED
Flags: camino1.5.6?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: