Camino only - Bug 419710: Fix selection of default feed handler from the open panel. r/sr=pink